2005-06-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/Makefile.in: Replace "sort" by "LC_ALL=C sort" when building
	allterm.h to avoid localized sorting.

2005-06-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Rewritten section for "help exit".

2005-06-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/eval.c src/internal.h src/internal.c (f_strstrt): New built-in
	string function that searches for a substring within a longer string.
	Equivalent to C library function strstr(haystack,needle) except that
	rather than returning a pointer, it returns an index.  Example:
	    n = strstrt("haystaneedleck","needle")
	sets n to 6.
	
	* demo/stringvar.dem docs/gnuplot.doc: Document and add to string demo.

	* NEWS: Update list of new features.

2005-06-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_xyzlabel): Allow string variable or expression for
	font name. This is a variant of a patch from Shigeharu TAKENO.

	* src/plot2d.c (get_data histogram_range_fiddling): Clean up histogram
	code dealing with missing data or blank lines. Fixes an autoscaling bug
	if a data file ends with blank lines.

2005-06-19  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src src/set.c (set_decimalsign): New command option
	    `set decimalsign {locale {"locale_spec"}}`
	 takes the decimal sign character from the locale specified for the
	 locale "locale_spec" or from the locale specified in the enviromental
	 variables LC_NUMERIC, LC_ALL, or LANG.

	* src/save.c (save_set_all): Save the current locale for LC_NUMERIC
	as well as the actual current value of decimalsign.

	 * src/show.c (num_to_str) src/util.c (gprintf): Allow for the
	 possibility that the current decimal sign is a comma rather than a dot.

	 * src/variable.c (locale_handler): Expand output by `show locale` to
	 show the current values of LC_NUMERIC LC_CTYPE and LC_TIME.

	 * src/unset.c (unset_decimalsign): If the decimalsign is reset using